# ConanDub

./: .pre-commit-config.yaml  AGENTS.md  COLAB_README.md  LICENSE  pyproject.toml  readme.md
.conan_out/: aligned.json  emotion.json  faces.json  manifest.json  manifest_it.json  output_private.mkv
.conan_out/char_aug/: clusters.json
.conan_out/characters/unknown/: unknown_000.txt
.conan_out/diar/: segments.json
.conan_out/frames/: frame_0001.txt
.cursor/rules/: rules.mdc
.github/workflows/: build.yml  windows.yml
colab/: requirements-gpu.txt  setup_colab.sh
configs/: default.yaml
docs/: 01_preprocessing_dataset.md  02_model_training.md  03_dubbing_synthesis.md  05_codegen_prompt.md
examples/: manifest_sample.json
notebooks/: 01_colab_starter.md  02_colab_tests.md
scripts/: clean.sh  colab_pull_inputs.sh  colab_run_quick.sh  demo_dry_run.sh  lint.sh  make_colab_bundle.sh  mux.sh  prepare_dataset.sh  separate.sh  setup.sh  test.sh
scripts/win/: clean.ps1  demo_dry_run.ps1  lint.ps1  make_colab_bundle.ps1  setup.ps1  test.ps1
src/conan_dub/: __init__.py  config.py
src/conan_dub.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/conan_dub/align/: __init__.py  diarize.py  whisperx_runner.py
src/conan_dub/audio/: __init__.py  loudness.py  mix.py  separate.py
src/conan_dub/charlink/: __init__.py  embed_cluster.py  fuse.py  seed_dataset.py
src/conan_dub/cli/: __init__.py  conan_dub.py
src/conan_dub/data/: __init__.py  export.py  schema.py  validate.py
src/conan_dub/ser/: __init__.py  emotion.py
tests/: test_cli.py
(+15 files in other folders)
